GBL-3513 / TSK-8189 -- публикация МЧД 5.02 для 6.1

--- a/modules/BackOffice-ObjectModel-Services-Entities/pages/Entities/PowerOfAttorneyFNSDOVBBData_CL.adoc
+++ b/modules/BackOffice-ObjectModel-Services-Entities/pages/Entities/PowerOfAttorneyFNSDOVBBData_CL.adoc
@@ -32,7 +32,7 @@ a|Заполняет Сведения о доверенности
 |`override PowerOfAttorneyRetrustType GetRetrustType()` |Заполняет тип передоверия
 |`override string GetPrincipal()` |Заполняет сведения о доверителе
 |`override string GetRepresentative()` |Заполняет сведения о лице, получившем полномочия
-|`override string GetSigner()` |Заполняет сведения о полписанте
+|`override string GetSigner()` |Заполняет сведения о подписанте
 |`override string GetPowerOfAttorneyMachineReadableFileID()` |Заполняет идентификатор файла МЧД
 |`override List<Powers> GetRepresentativesPowers()` |Заполняет сведения о полномочиях представителя
 
