--- a/modules/BackOffice-ObjectModel-Services-Entities/pages/Entities/Entities_NS.adoc
+++ b/modules/BackOffice-ObjectModel-Services-Entities/pages/Entities/Entities_NS.adoc
@@ -114,6 +114,57 @@
 |`xref:Entities/PowerOfAttorneyFNSDOVBBData.SoleProprietorInfo0_CL.adoc[SoleProprietorInfo0]` |Сведения об индивидуальном предпринимателе (СведИПТип)
 |`xref:Entities/PowerOfAttorneyFNSDOVBBData.SoleProprietorInfo1_CL.adoc[SoleProprietorInfo1]` |Сведения об индивидуальном предпринимателе (СвИПТип)
 
+|`xref:BackOffice-ObjectModel-Services-Entities:Entities/PowerOfAttorneyFNSDOVEL502Data_CL.adoc[PowerOfAttorneyFNSDOVEL502Data_CL]`
+|Данные доверенности в формате, подтверждающем полномочия представителя налогоплательщика, версия 5.02.
+|`xref:BackOffice-ObjectModel-Services-Entities:Entities/PowerOfAttorneyFNSDOVEL502Data.PowerOfAttorneyDocument_CL.adoc[PowerOfAttorneyDocument]`
+|Состав и структура документа (Документ). Код формы по КНД принимает значение 1110310 в соответствии с форматом и не может быть изменён.
+|`xref:BackOffice-ObjectModel-Services-Entities:Entities/PowerOfAttorneyFNSDOVEL502Data.PowerOfAttorneyDocumentData_CL.adoc[PowerOfAttorneyDocumentData]`
+|Доверенность (Довер) -- 4.3
+|`xref:BackOffice-ObjectModel-Services-Entities:Entities/PowerOfAttorneyFNSDOVEL502Data.PowerOfAttorneyInfo_CL.adoc[PowerOfAttorneyInfo]`
+|Сведения доверенности (СвДов) -- 4.4
+|`xref:BackOffice-ObjectModel-Services-Entities:Entities/PowerOfAttorneyFNSDOVEL502Data.PrincipalInfo_CL.adoc[PrincipalInfo]`
+|Сведения о доверителе (СвДоверит) -- 4.5
+|`xref:BackOffice-ObjectModel-Services-Entities:Entities/PowerOfAttorneyFNSDOVEL502Data.RussianCompanyInfo_CL.adoc[RussianCompanyInfo]`
+|Сведения о российской организации (НПЮЛ) -- 4.6
+|`xref:BackOffice-ObjectModel-Services-Entities:Entities/PowerOfAttorneyFNSDOVEL502Data.PrincipalWithoutPowerOfAttorneyInfo_CL.adoc[PrincipalWithoutPowerOfAttorneyInfo]`
+|Сведения о лице, действующем от имени юридического лица без доверенности (ЛицоБезДов) -- 4.7
+|`xref:BackOffice-ObjectModel-Services-Entities:Entities/PowerOfAttorneyFNSDOVEL502Data.IndividualInfo_CL.adoc[IndividualInfo]`
+|Сведения по физическому лицу (СвФЛ) -- 4.8
+|`xref:BackOffice-ObjectModel-Services-Entities:Entities/PowerOfAttorneyFNSDOVEL502Data.ForeignCompanyInfo_CL.adoc[ForeignCompanyInfo]`
+|Сведения об иностранной организации (ИО) -- 4.9
+|`xref:BackOffice-ObjectModel-Services-Entities:Entities/PowerOfAttorneyFNSDOVEL502Data.SeparateSubdivisionManagerInfo_CL.adoc[SeparateSubdivisionManagerInfo]`
+|Сведения о руководителе обособленного подразделения (СвРукОП) -- 4.10
+|`xref:BackOffice-ObjectModel-Services-Entities:Entities/PowerOfAttorneyFNSDOVEL502Data.RetrustPowerOfAttorneyDocumentData_CL.adoc[RetrustPowerOfAttorneyDocumentData]`
+|Передоверие (Передов) -- 4.11
+|`xref:BackOffice-ObjectModel-Services-Entities:Entities/PowerOfAttorneyFNSDOVEL502Data.RetrustPowerOfAttorneyInfo_CL.adoc[RetrustPowerOfAttorneyInfo]`
+|Сведения доверенности, совершённой (выданной) в рамках передоверия (СвДовП) -- 4.12
+|`xref:BackOffice-ObjectModel-Services-Entities:Entities/PowerOfAttorneyFNSDOVEL502Data.PrimaryPowerOfAttorneyInfo_CL.adoc[PrimaryPowerOfAttorneyInfo]`
+|Сведения об основной доверенности (СвОснДов) -- 4.13
+|`xref:BackOffice-ObjectModel-Services-Entities:Entities/PowerOfAttorneyFNSDOVEL502Data.PrimaryPrincipalInfo_CL.adoc[PrimaryPrincipalInfo]`
+|Сведения о доверителе основной доверенности (СвДоверитОсн) -- 4.14
+|`xref:BackOffice-ObjectModel-Services-Entities:Entities/PowerOfAttorneyFNSDOVEL502Data.ForeignCompanyInfo1_CL.adoc[ForeignCompanyInfo1]`
+|Сведения о доверителе – иностранном юридическом лице (ДоверитИО) -- 4.15
+|`xref:BackOffice-ObjectModel-Services-Entities:Entities/PowerOfAttorneyFNSDOVEL502Data.ParentPrincipalInfo_CL.adoc[ParentPrincipalInfo]`
+|Сведения о доверителе из доверенности, на основании которой осуществляется передоверие (СвДоверщП) -- 4.16
+|`xref:BackOffice-ObjectModel-Services-Entities:Entities/PowerOfAttorneyFNSDOVEL502Data.RetrustPrincipalInfo_CL.adoc[RetrustPrincipalInfo]`
+|Сведения о доверителе в порядке передоверия (СвДоверщ) -- 4.17
+|`xref:BackOffice-ObjectModel-Services-Entities:Entities/PowerOfAttorneyFNSDOVEL502Data.OrganizationInfo_CL.adoc[OrganizationInfo]`
+|Сведения об организации (СвОргТип) -- 4.18
+|`xref:BackOffice-ObjectModel-Services-Entities:Entities/PowerOfAttorneyFNSDOVEL502Data.RussianCompanyInfo1_CL.adoc[RussianCompanyInfo1]`
+|Сведения о российском юридическом лице (СведЮЛТип) -- 4.19
+|`xref:BackOffice-ObjectModel-Services-Entities:Entities/PowerOfAttorneyFNSDOVEL502Data.RepresentativeInfo_CL.adoc[RepresentativeInfo]`
+|Сведения об уполномоченном представителе (уполномоченных представителях) (СвПредТип) -- 4.20
+|`xref:BackOffice-ObjectModel-Services-Entities:Entities/PowerOfAttorneyFNSDOVEL502Data.IndividualInfo2_CL.adoc[IndividualInfo2]`
+|Сведения о физическом лице, в том числе индивидуальном предпринимателе (СвФизЛицТип) -- 4.21
+|`xref:BackOffice-ObjectModel-Services-Entities:Entities/PowerOfAttorneyFNSDOVEL502Data.IndividualInfo3_CL.adoc[IndividualInfo3]`
+|Сведения по физическому лицу (СведФЛТип) -- 4.22
+|`xref:BackOffice-ObjectModel-Services-Entities:Entities/PowerOfAttorneyFNSDOVEL502Data.AddressInfo_CL.adoc[AddressInfo]`
+|Адрес доверителя в доверенности (АдрДовТип) -- 4.23
+|`xref:BackOffice-ObjectModel-Services-Entities:Entities/PowerOfAttorneyFNSDOVEL502Data.IdentityCardInfo_CL.adoc[IdentityCardInfo]`
+|Сведения о документе, удостоверяющем личность физического лица (УдЛичнФЛТип) -- 4.24
+|`xref:BackOffice-ObjectModel-Services-Entities:Entities/PowerOfAttorneyFNSDOVEL502Data.FIO_CL.adoc[FIO]`
+|Фамилия, имя, отчество (ФИОТип) -- 4.25
+
 |`xref:Entities/PowerOfAttorneyFNSDOVELData_CL.adoc[PowerOfAttorneyFNSDOVELDat]` |Сведения о доверенности ФНС в формате DOVEL.
 |`xref:Entities/PowerOfAttorneyFNSDOVELData.AddressInfo_CL.adoc[AddressInfo]` |Сведения об адресе (АдрТип)
 |`xref:Entities/PowerOfAttorneyFNSDOVELData.BasicPowerOfAttorneyInfo_CL.adoc[BasicPowerOfAttorneyInfo]` |Сведения об Основной доверенности (СвОснДовер)
