TSK-7179 / GBL-3494 -- отзыв МЧД 5.02

--- a/modules/BackOffice-ObjectModel-Services-Entities/pages/Entities/PowerOfAttorneyHandlingFlags_EN.adoc
+++ b/modules/BackOffice-ObjectModel-Services-Entities/pages/Entities/PowerOfAttorneyHandlingFlags_EN.adoc
@@ -22,4 +22,5 @@ public enum PowerOfAttorneyHandlingFlags
 |`SkipEntityMatchCheck = 1` |Не проверять соответствие сущностей доверенности со справочниками.
 |`SupportDistributedRegistryFederalTaxService = 2` |Включить формирование доверенности для ЦПРР.
 |`DisableAutoAssignmentReadRightsToRepresentative = 4` |Отключить автоматическую выдачу права на СКД представителю-физлицу.
+|`DisableSignerSnilsValidation = 8` |Отключить проверку соответствия СНИЛСа подписанта данным из МЧД, заявления на отзыв МЧД.
 |===
