--- a/modules/Platform-ObjectModel/pages/ObjectModel_NS.adoc
+++ b/modules/Platform-ObjectModel/pages/ObjectModel_NS.adoc
@@ -7,8 +7,8 @@
 [cols=",",options="header"]
 |===
 |Пространство имён |Описание
-|`xref:Mapping/Mapping_NS.adoc[DocsVision.Platform.ObjectModel.Mapping]` |Пространство имён DocsVision.Platform.ObjectModel.Mapping содержит преобразователи данных.
-|`xref:Search/Search_NS.adoc[DocsVision.Platform.ObjectModel.Search]` |Пространство имён DocsVision.Platform.ObjectModel.Search предоставляет типы, используемые для организации поиска.
+|`xref:Mapping/Mapping_NS.adoc[DocsVision.Platform.ObjectModel.Mapping]` |Пространство имён `DocsVision.Platform.ObjectModel.Mapping` содержит преобразователи данных.
+|`xref:Search/Search_NS.adoc[DocsVision.Platform.ObjectModel.Search]` |Пространство имён `DocsVision.Platform.ObjectModel.Search` предоставляет типы, используемые для организации поиска.
 |===
 
 == Классы
@@ -33,6 +33,41 @@
 |Системная карточка доверенности.
 |`xref:BackOffice-ObjectModel-Powers:PowerOfAttorneyMainInfo_CL.adoc[PowerOfAttorneyMainInfo]`
 |Представляет секцию "Основная информация" системной карточки доверенности.
+
+|`xref:BackOffice-ObjectModel-Powers:PowerOfAttorneyFNSDOVEL502RevocationData_CL.adoc[PowerOfAttorneyFNSDOVEL502RevocationData]`
+|Данные отзыва доверенности версии 5.02 для взаимодействия с ФНС.
+|`xref:BackOffice-ObjectModel-Powers:PowerOfAttorneyFNSDOVEL502RevocationData.FIO_CL.adoc[FIO]`
+|Фамилия, имя, отчество (ФИОТип). Таблица 4.16.
+|`xref:BackOffice-ObjectModel-Powers:PowerOfAttorneyFNSDOVEL502RevocationData.ForeignCompanyInfo_CL.adoc[ForeignCompanyInfo]`
+|Сведения об иностранной организации (при отзыве основной доверенности) (ИО). Таблица 4.8.
+|`xref:BackOffice-ObjectModel-Powers:PowerOfAttorneyFNSDOVEL502RevocationData.IdentityCardInfo_CL.adoc[IdentityCardInfo]`
+|Сведения о документе, удостоверяющем личность физического лица (УдЛичнФЛТип). Таблица 4.15.
+|`xref:BackOffice-ObjectModel-Powers:PowerOfAttorneyFNSDOVEL502RevocationData.IndividualInfo1_CL.adoc[IndividualInfo1]`
+|Сведения о физическом лице (СведФЛТип). Таблица 4.12.
+|`xref:BackOffice-ObjectModel-Powers:PowerOfAttorneyFNSDOVEL502RevocationData.IndividualInfo_CL.adoc[IndividualInfo]`
+|Сведения о физическом лице, в том числе индивидуальном предпринимателе (СвФизЛицТип). Таблица 4.14.
+|`xref:BackOffice-ObjectModel-Powers:PowerOfAttorneyFNSDOVEL502RevocationData.OrganizationInfo_CL.adoc[OrganizationInfo]`
+|Сведения об организации (СвОргТип). Таблица 4.13.
+|`xref:BackOffice-ObjectModel-Powers:PowerOfAttorneyFNSDOVEL502RevocationData.PowerOfAttorneyInfo_CL.adoc[PowerOfAttorneyInfo]`
+|Сведения для доверенности, подтверждающей полномочия нескольких уполномоченных представителей (СвПдтвУП). Таблица 4.4.
+|`xref:BackOffice-ObjectModel-Powers:PowerOfAttorneyFNSDOVEL502RevocationData.PrincipalInfo_CL.adoc[PrincipalInfo]`
+|Сведения о доверителе (СвДоверит). Таблица 4.5.
+|`xref:BackOffice-ObjectModel-Powers:PowerOfAttorneyFNSDOVEL502RevocationData.PrincipalWithoutPowerOfAttorneyInfo_CL.adoc[PrincipalWithoutPowerOfAttorneyInfo]`
+|Сведения о лице, действующем от имени юридического лица без доверенности (СвРукОрг). Таблица 4.7.
+|`xref:BackOffice-ObjectModel-Powers:PowerOfAttorneyFNSDOVEL502RevocationData.RetrustPrincipalInfo_CL.adoc[RetrustPrincipalInfo]`
+|Сведения о доверителе при отзыве доверенности, совершенной (выданной) в порядке передоверия (СвДоверщП).
+Таблица 4.10.
+|`xref:BackOffice-ObjectModel-Powers:PowerOfAttorneyFNSDOVEL502RevocationData.RevocationDocument_CL.adoc[RevocationDocument]`
+|Состав и структура документа (Документ). Таблица 4.2.
+|`xref:BackOffice-ObjectModel-Powers:PowerOfAttorneyFNSDOVEL502RevocationData.RevocationInfo_CL.adoc[RevocationInfo]`
+|Сведения заявления об отзыве доверенности (СвЗаяв). Таблица 4.3.
+|`xref:BackOffice-ObjectModel-Powers:PowerOfAttorneyFNSDOVEL502RevocationData.RussianCompanyInfo_CL.adoc[RussianCompanyInfo]`
+|Сведения о российской организации (при отзыве основной доверенности) (НПЮЛ). Таблица 4.6.
+|`xref:BackOffice-ObjectModel-Powers:PowerOfAttorneyFNSDOVEL502RevocationData.SeparateSubdivisionManagerInfo_CL.adoc[SeparateSubdivisionManagerInfo]`
+|Сведения о руководителе обособленного подразделения (СвРукОП). Таблица 4.9.
+|`xref:BackOffice-ObjectModel-Powers:PowerOfAttorneyFNSDOVEL502RevocationData.SignerInfo_CL.adoc[SignerInfo]`
+|Сведения о физическом лице, подписывающем заявление об отзыве доверенности от имени доверителя (российской организации / иностранной организации) без доверенности, или сведения о физическом лице, подписывающем заявление об отзыве доверенности от своего имени, в том числе при передаче полномочий другому лицу в порядке передоверия (Подписант). Таблица 4.11.
+
 |`xref:BackOffice-ObjectModel-Powers:PowerOfAttorneyRepresentative_CL.adoc[PowerOfAttorneyRepresentative]`
 |Представляет секцию "Представитель" системной карточки доверенности.
 |`xref:BackOffice-ObjectModel-Powers:PowerOfAttorneyRepresentativesPowers_CL.adoc[PowerOfAttorneyRepresentativesPowers]`
