--- a/modules/ROOT/partials/bo-om-services-powers.adoc
+++ b/modules/ROOT/partials/bo-om-services-powers.adoc
@@ -1,5 +1,21 @@
 ****** xref:BackOffice-ObjectModel-Powers:PowerOfAttorney_CL.adoc[]
 ****** xref:BackOffice-ObjectModel-Powers:PowerOfAttorneyMainInfo_CL.adoc[]
+****** xref:BackOffice-ObjectModel-Powers:PowerOfAttorneyFNSDOVEL502RevocationData_CL.adoc[]
+******* xref:BackOffice-ObjectModel-Powers:PowerOfAttorneyFNSDOVEL502RevocationData.FIO_CL.adoc[]
+******* xref:BackOffice-ObjectModel-Powers:PowerOfAttorneyFNSDOVEL502RevocationData.ForeignCompanyInfo_CL.adoc[]
+******* xref:BackOffice-ObjectModel-Powers:PowerOfAttorneyFNSDOVEL502RevocationData.IdentityCardInfo_CL.adoc[]
+******* xref:BackOffice-ObjectModel-Powers:PowerOfAttorneyFNSDOVEL502RevocationData.IndividualInfo1_CL.adoc[]
+******* xref:BackOffice-ObjectModel-Powers:PowerOfAttorneyFNSDOVEL502RevocationData.IndividualInfo_CL.adoc[]
+******* xref:BackOffice-ObjectModel-Powers:PowerOfAttorneyFNSDOVEL502RevocationData.OrganizationInfo_CL.adoc[]
+******* xref:BackOffice-ObjectModel-Powers:PowerOfAttorneyFNSDOVEL502RevocationData.PowerOfAttorneyInfo_CL.adoc[]
+******* xref:BackOffice-ObjectModel-Powers:PowerOfAttorneyFNSDOVEL502RevocationData.PrincipalInfo_CL.adoc[]
+******* xref:BackOffice-ObjectModel-Powers:PowerOfAttorneyFNSDOVEL502RevocationData.PrincipalWithoutPowerOfAttorneyInfo_CL.adoc[]
+******* xref:BackOffice-ObjectModel-Powers:PowerOfAttorneyFNSDOVEL502RevocationData.RetrustPrincipalInfo_CL.adoc[]
+******* xref:BackOffice-ObjectModel-Powers:PowerOfAttorneyFNSDOVEL502RevocationData.RevocationDocument_CL.adoc[]
+******* xref:BackOffice-ObjectModel-Powers:PowerOfAttorneyFNSDOVEL502RevocationData.RevocationInfo_CL.adoc[]
+******* xref:BackOffice-ObjectModel-Powers:PowerOfAttorneyFNSDOVEL502RevocationData.RussianCompanyInfo_CL.adoc[]
+******* xref:BackOffice-ObjectModel-Powers:PowerOfAttorneyFNSDOVEL502RevocationData.SeparateSubdivisionManagerInfo_CL.adoc[]
+******* xref:BackOffice-ObjectModel-Powers:PowerOfAttorneyFNSDOVEL502RevocationData.SignerInfo_CL.adoc[]
 ****** xref:BackOffice-ObjectModel-Powers:PowerOfAttorneyRegTransferStatuses_EN.adoc[]
 ****** xref:BackOffice-ObjectModel-Powers:PowerOfAttorneyRepresentative_CL.adoc[]
 ****** xref:BackOffice-ObjectModel-Powers:PowerOfAttorneyRepresentativesPowers_CL.adoc[]
