ms/pg в атрибуты

--- a/modules/appendix/pages/user-session-properties.adoc
+++ b/modules/appendix/pages/user-session-properties.adoc
@@ -34,7 +34,7 @@ string accountName = userSession.Properties["AccountName"].Value.ToString() <.>
 |`ConnectAddress` |Адрес сервера {dv}, к которому выполнено подключение.
 |`CurrentUserID` |Идентификатор сотрудника, под чьей учетной записью выполнено подключение к серверу.
 |`CustomOperationsTimeout` |Время отклика сервера для сложной операции. Проверяется при включённом контроле сети.
-|`DatabaseType` |Тип базы данных: `0` -- Microsoft SQL; `1` -- PostgreSQL.
+|`DatabaseType` |Тип базы данных: `0` -- {mssql}QL; `1` -- {pgsql}reSQL.
 |`EmployeeID` |Идентификатор сотрудника, под чьей учетной записью выполнено подключение к серверу.
 |`ExpirationDate` |Дата окончания срока действия лицензии для {dv}.
 |`ExtendedMetadata` |Флаг, указывающий, что база данных использует расширенные метаданные.
