GBL-3492 / TSK-7003 -- не рекомендуется импортировать напрямую из 5.5 в 6.1

--- a/modules/cards/pages/export-import-print.adoc
+++ b/modules/cards/pages/export-import-print.adoc
@@ -29,6 +29,8 @@ card.SaveXml(file, ExportFlags.LinkedCards & ExportFlags.LinkedRows);
 
 Для управления логикой работы импорта предназначен специальный тип объектов -- `xref:Platform-ObjectManager-IUpdatable:ImportCardInspector_CL.adoc[DocsVision.Platform.ObjectManager.ImportCardInspector]`. Этот объект полностью реализует процесс импорта, осуществляет контроль целостности данных и выполняет разрешение конфликтов.
 
+NOTE: Карточки, содержащие отсылки к версии компонентов, не рекомендуется напрямую импортировать в версию 6.1 и выше, если они выгружены из версии 5.5.
+
 ****
 Необходимость наличия сложного механизма разрешения конфликтов при импорте обусловлена многообразием возможных конфигураций системы. Например, даже при импорте одной отдельно взятой карточки может возникнуть ситуация, когда такая карточка с таким идентификатором уже существует в базе. Это сразу порождает несколько возможных вариантов дальнейшего поведения импортера:
 
