--- a/modules/ApprovalDesigner/pages/ObjectModel/Services/ApprovalStageService_CL.adoc
+++ b/modules/ApprovalDesigner/pages/ObjectModel/Services/ApprovalStageService_CL.adoc
@@ -95,7 +95,7 @@ public class ApprovalStageService : ContextService, IApprovalStageService
 
 |`StartStage(ApprovalStage, Reconcile)`
 
-|Первый этап согласования.
+|Начало этапа согласования.
 
 |`OnStageStarted(ApprovalStage, ApprovalPath, Reconcile)`
 
