--- a/modules/appendix/pages/user-session-properties.adoc
+++ b/modules/appendix/pages/user-session-properties.adoc
@@ -34,7 +34,7 @@ string accountName = userSession.Properties["AccountName"].Value.ToString() <.>
 |`ConnectAddress` |Адрес сервера {dv}, к которому выполнено подключение.
 |`CurrentUserID` |Идентификатор сотрудника, под чьей учетной записью выполнено подключение к серверу.
 |`CustomOperationsTimeout` |Время отклика сервера для сложной операции. Проверяется при включённом контроле сети.
-|`DatabaseType` |Тип базы данных: `0` -- Microsoft SQL; `1` -- {pgsql}.
+|`DatabaseType` |Тип базы данных: `0` -- {mssql}; `1` -- {pgsql}.
 |`EmployeeID` |Идентификатор сотрудника, под чьей учетной записью выполнено подключение к серверу.
 |`ExpirationDate` |Дата окончания срока действия лицензии для {dv}.
 |`ExtendedMetadata` |Флаг, указывающий, что база данных использует расширенные метаданные.
@@ -44,9 +44,9 @@ string accountName = userSession.Properties["AccountName"].Value.ToString() <.>
 |`FullTextSearchEnabled` |Флаг, указывающий, что полнотекстовый поиск включён в базе данных.
 |`IsAdmin` |Флаг, указывающий, что текущий пользователь является администратором {dv} -- входит в группу *{dv-admins-serv}* на сервере {dv}.
 |`IsArchiveOperator` |Флаг, указывающий, что текущий пользователь может работать с долговременным архивом -- входит в группу *{dv-arch-ops-serv}* на сервере {dv}.
-|`IsPowerUser` |Флаг, указывающий, что текущий пользователь является привилегированным пользователем -- входит в группу _Docsvision Power Users_ на сервере {dv}.
+|`IsPowerUser` |Флаг, указывающий, что текущий пользователь является привилегированным пользователем -- входит в группу *{dv-power-users-serv}* на сервере {dv}.
 |`IsSecurityAdmin` |Флаг, указывающий, что текущий пользователь обладает всеми правами *{dv-admins-serv}*, а также может изменять уровни доступа для субъектов и объектов системы -- входит в группу *{dv-admins-serv}* на сервере {dv}.
-|`IsSQCreator` |Флаг, указывающий, что текущий пользователь может создавать новые поисковые запросы -- входит в группу _Docsvision Search Query Creators_ на сервере {dv}.
+|`IsSQCreator` |Флаг, указывающий, что текущий пользователь может создавать новые поисковые запросы -- входит в группу *{dv-search-creators-serv}* на сервере {dv}.
 |`Languages` |Список поддерживаемых языков пользовательского интерфейса.
 |`License` |Полный XML-текст лицензионного ключа.
 |`LocaleID` |Числовой идентификатор текущего языка, на котором будут возвращаться все строковые значения и описания ошибок.
