--- a/modules/BackOffice-ObjectModel-Services-Entities/pages/Entities/PowerOfAttorneyEMCHDData.NotarialActionParticipantStatus_EN.adoc
+++ b/modules/BackOffice-ObjectModel-Services-Entities/pages/Entities/PowerOfAttorneyEMCHDData.NotarialActionParticipantStatus_EN.adoc
@@ -19,9 +19,9 @@ public enum NotarialActionParticipantStatus
 |Имя члена |Описание
 
 |`Declarant = 101` |Заявитель
-Заявитель, являющийся одновременно |`RepresentativeDeclarant = 102` |представителем
+|`RepresentativeDeclarant = 102` |Заявитель, являющийся одновременно представителем
 |`Representative = 299` |Представитель
 |`Applicant = 301` |Рукоприкладчик
 |`Translator = 303` |Переводчик
-Иное лицо, принимавшее участие в |`OtherPerson = 399` |совершении нотариального действия
+|`OtherPerson = 399` |Иное лицо, принимавшее участие в совершении нотариального действия
 |===
