TSK-7977 / GBL-3730 -- работа с readonly-справочниками

--- a/modules/ROOT/partials/pl-om-cardmanager.adoc
+++ b/modules/ROOT/partials/pl-om-cardmanager.adoc
@@ -27,6 +27,8 @@
 ****** xref:Platform-ObjectManager-CardManager:CardManager.GetDictionary_1_MT.adoc[]
 ****** xref:Platform-ObjectManager-CardManager:CardManager.GetDictionaryData_MT.adoc[]
 ****** xref:Platform-ObjectManager-CardManager:CardManager.GetDictionaryData_1_MT.adoc[]
+****** xref:Platform-ObjectManager-CardManager:CardManager.GetDictionaryDataAsReadonly_MT.adoc[]
+****** xref:Platform-ObjectManager-CardManager:CardManager.GetDictionaryAsReadonly_MT.adoc[]
 ****** xref:Platform-ObjectManager-CardManager:CardManager.GetLinksToCard_MT.adoc[]
 ****** xref:Platform-ObjectManager-CardManager:CardManager.GetLinksFromCard_MT.adoc[]
 ****** xref:Platform-ObjectManager-CardManager:CardManager.GetSearchAggregationItemsRequest_MT.adoc[]
@@ -51,6 +53,7 @@
 ****** xref:Platform-ObjectManager-CardManager:CardManager.GetViewRequestFromSearchResults_MT.adoc[]
 ****** xref:Platform-ObjectManager-CardManager:CardManager.ImportCards_MT.adoc[]
 ****** xref:Platform-ObjectManager-CardManager:CardManager.ImportCards_1_MT.adoc[]
+****** xref:Platform-ObjectManager-CardManager:CardManager.UpdateMetadata_MT.adoc[]
 ****** xref:Platform-ObjectManager-CardManager:CardManager.PurgeCache_MT.adoc[]
 ****** xref:Platform-ObjectManager-CardManager:CardManager.PurgeCards_1_MT.adoc[]
 ****** xref:Platform-ObjectManager-CardManager:CardManager.PurgeCards_2_MT.adoc[]
