--- a/modules/Platform-ObjectManager-CardManager/pages/CardManager_CL.adoc
+++ b/modules/Platform-ObjectManager-CardManager/pages/CardManager_CL.adoc
@@ -17,6 +17,7 @@ public abstract class CardManager
 [cols=",",options="header"]
 |===
 |Имя |Описание
+
 |`xref:CardManager.CardLibraries_PR.adoc[CardLibraries]`
 |Возвращает коллекцию библиотек карточек, зарегистрированных в текущей базе данных.
 
@@ -33,11 +34,6 @@ public abstract class CardManager
 [cols=",",options="header"]
 |===
 |Имя |Описание
-|`xref:CardManager.BatchUpdate_MT.adoc[BatchUpdate(Guid[\])]`
-|Выполняет пакетное обновление данных для указанных карточек.
-
-|`xref:CardManager.ClearLink_MT.adoc[ClearLink(Guid, Guid, String)]`
-|Позволяет очистить ссылку, хранящуюся в указанном поле указанной строки.
 
 |`xref:CardManager.CreateCard_MT.adoc[CreateCard(Guid)]`
 |Создаёт карточку и возвращает ссылку на интерфейс компонента карточки.
@@ -57,24 +53,6 @@ public abstract class CardManager
 |`xref:CardManager.DeleteCard_1_MT.adoc[DeleteCard(Guid, Boolean)]`
 |Удаляет карточку с возможностью восстановления.
 
-|`xref:CardManager.FindAggregationCardsInfo_MT.adoc[FindAggregationCardsInfo (SearchAggregationItemsRequest)]`
-|Получает список агрегатов и/или результаты фильтрации.
-
-|`xref:CardManager.FindCards_MT.adoc[FindCards(String)]`
-|Ищет карточки, удовлетворяющие поисковому запросу.
-
-|`xref:CardManager.FindCardsInfo_MT.adoc[FindCardsInfo(Guid)]`
-|Ищет информацию по карточкам согласно заданному идентификатору поискового запроса.
-
-|`xref:CardManager.FindCardsInfo_1_MT.adoc[FindCardsInfo(String)]`
-|Ищет информацию по карточкам согласно заданному поисковому запросу.
-
-|`xref:CardManager.FindCardsInfo_2_MT.adoc[FindCardsInfo(Guid, QueryParameterCollection)]`
-|Ищет информацию по карточкам согласно заданному идентификатору поискового запроса с учетом параметров поиска.
-
-|`xref:CardManager.FindCardsInfo_3_MT.adoc[FindCardsInfo(String, QueryParameterCollection)]`
-|Ищет информацию по карточкам согласно заданному поисковому запросу с учетом параметров поиска.
-
 |`xref:CardManager.GetCard_MT.adoc[GetCard(Guid)]`
 |Возвращает ссылку на программный интерфейс карточки.
 
@@ -90,12 +68,6 @@ public abstract class CardManager
 |`xref:CardManager.GetCardData_2_MT.adoc[GetCardData(Guid, Guid)]`
 |Возвращает данные карточки с секцией заданного типа и заданным идентификатором строки.
 
-|`xref:CardManager.GetCards_MT.adoc[GetCards(Guid)]`
-|Возвращает коллекцию всех карточек данного типа.
-
-|`xref:CardManager.GetCardState_MT.adoc[GetCardState(Guid)]`
-|Возвращает статус карточки. Позволяет определить, что карточка удалена..
-
 |`xref:CardManager.GetDictionary_MT.adoc[GetDictionary(Guid)]`
 |Возвращает ссылку на программный интерфейс справочника.
 
@@ -108,14 +80,50 @@ public abstract class CardManager
 |`xref:CardManager.GetDictionaryData_1_MT.adoc[GetDictionaryData(Guid, Boolean)]`
 |Возвращает данные справочника указанного типа с обновлением кэша.
 
-|`xref:CardManager.GetLinksToCard_MT.adoc[GetLinksToCard(Guid, LinkType, int)]`
-|Возвращает коллекцию карточек, ссылающихся на данную, с заданным типом ссылки и глубиной вложенности.
+|`xref:CardManager.GetDictionaryDataAsReadonly_MT.adoc[GetDictionaryDataAsReadonly(Guid)]`
+|Возвращает данные справочника в режиме "только чтение".
+
+|`xref:CardManager.GetDictionaryAsReadonly_MT.adoc[GetDictionaryAsReadonly(Guid)]`
+|Возвращает объект справочника в режиме "только чтение".
+
+|`xref:CardManager.GetCards_MT.adoc[GetCards(Guid)]`
+|Возвращает коллекцию всех карточек данного типа.
+
+|`xref:CardManager.GetCardState_MT.adoc[GetCardState(Guid)]`
+|Возвращает статус карточки. Позволяет определить, что карточка удалена.
+
+|`xref:CardManager.PurgeCards_1_MT.adoc[PurgeCards(DateTime)]`
+|Окончательно удаляет карточки помеченные к удалению с учетом даты удаления.
+
+|`xref:CardManager.PurgeCards_2_MT.adoc[PurgeCards(DateTime, Guid)]`
+|Окончательно удаляет карточки помеченные к удалению с учетом даты удаления и типа карточки.
+
+|`xref:CardManager.RestoreCard_MT.adoc[RestoreCard(Guid)]`
+|Восстанавливает карточку, помеченную к удалению.
+
+|`xref:CardManager.BatchUpdate_MT.adoc[BatchUpdate(Guid[\])]`
+|Выполняет пакетное обновление данных для указанных карточек.
+
+|`xref:CardManager.PurgeCache_MT.adoc[PurgeCache()]`
+|Очистка кэша менеджера объектов.
+
+|`xref:CardManager.ImportCards_MT.adoc[ImportCards(Stream)]`
+|Импортирует карточку из потока XML данных.
+
+|`xref:CardManager.ImportCards_1_MT.adoc[ImportCards(Stream, ImportCardInspector)]`
+|Импортирует карточку из потока XML данных, с заданным алгоритмом импорта.
+
+|`xref:CardManager.UpdateMetadata_MT.adoc[UpdateMetadata(string)]`
+|Обновляет динамические метаданные указанными XML-данными.
+
+|`xref:CardManager.ClearLink_MT.adoc[ClearLink(Guid, Guid, String)]`
+|Позволяет очистить ссылку, хранящуюся в указанном поле указанной строки.
 
 |`xref:CardManager.GetLinksFromCard_MT.adoc[GetLinksFromCard(Guid, LinkType, int)]`
 |Возвращает коллекцию карточек, на которые ссылается данная карточка, с заданным типом ссылки и глубиной вложенности.
 
-|`xref:CardManager.GetSearchAggregationItemsRequest_MT.adoc[GetSearchAggregationItemsRequest (SearchAggregationItemsResultType, Guid, Guid, string, int?)]`
-|Возвращает результат агрегации.
+|`xref:CardManager.GetLinksToCard_MT.adoc[GetLinksToCard(Guid, LinkType, int)]`
+|Возвращает коллекцию карточек, ссылающихся на данную, с заданным типом ссылки и глубиной вложенности.
 
 |`xref:CardManager.GetViewData_MT.adoc[GetViewData(ViewReadRequest)]`
 |Возвращает данные представления карточки для заданного запроса представления.
@@ -135,9 +143,6 @@ public abstract class CardManager
 |`xref:CardManager.GetViewData_5_MT.adoc[GetViewData(ViewSource, string, QueryParameterCollection)]`
 |Возвращает данные представления с учетом приведенного описания, с указанием параметров поиска.
 
-|`xref:CardManager.GetViewRequest_MT.adoc[GetViewRequest]`
-|Создание экземпляра запроса представления.
-
 |`xref:CardManager.GetViewRequestFromCardLib_MT.adoc[GetViewRequestFromCardLib]`
 |Создание экземпляра запроса представления для указанной библиотеки карточек.
 
@@ -146,6 +151,9 @@ public abstract class CardManager
 
 |`xref:CardManager.GetViewRequestFromCardType_MT.adoc[GetViewRequestFromCardType(Guid)]`
 |Создание экземпляра запроса представления для заданного типа карточек.
+
+|`xref:CardManager.GetViewRequest_MT.adoc[GetViewRequest]`
+|Создание экземпляра запроса представления.
 
 |`xref:CardManager.GetViewRequestFromFolder_MT.adoc[GetViewRequestFromFolder(Guid)]`
 |Создание экземпляра запроса представления для заданной папки.
@@ -171,29 +179,33 @@ public abstract class CardManager
 |`xref:CardManager.GetViewRequestFromSearchResults_MT.adoc[GetViewRequestFromSearchResults(Guid)]`
 |Создание экземпляра запроса представления для папки результатов поиска.
 
-|`xref:CardManager.GetSearchFilesCitationsRequest_MT.adoc[GetSearchFilesCitationsRequest(SearchFilesCitationParentObjectsType, string)]`
-|Создаёт класс запроса, включающий параметры поиска и формирования цитат.
+|`xref:CardManager.FindCards_MT.adoc[FindCards(String)]`
+|Ищет карточки, удовлетворяющие поисковому запросу.
 
-|`xref:CardManager.ImportCards_MT.adoc[ImportCards(Stream)]`
-|Импортирует карточку из потока XML данных.
+|`xref:CardManager.FindCardsInfo_MT.adoc[FindCardsInfo(Guid)]`
+|Ищет информацию по карточкам согласно заданному идентификатору поискового запроса.
 
-|`xref:CardManager.ImportCards_1_MT.adoc[ImportCards(Stream, ImportCardInspector)]`
-|Импортирует карточку из потока XML данных, с заданным алгоритмом импорта.
+|`xref:CardManager.FindCardsInfo_1_MT.adoc[FindCardsInfo(String)]`
+|Ищет информацию по карточкам согласно заданному поисковому запросу.
 
-|`xref:CardManager.PurgeCache_MT.adoc[PurgeCache()]`
-|Очистка кэша менеджера объектов.
+|`xref:CardManager.FindCardsInfo_2_MT.adoc[FindCardsInfo(Guid, QueryParameterCollection)]`
+|Ищет информацию по карточкам согласно заданному идентификатору поискового запроса с учетом параметров поиска.
 
-|`xref:CardManager.PurgeCards_1_MT.adoc[PurgeCards(DateTime)]`
-|Окончательно удаляет карточки помеченные к удалению с учетом даты удаления.
+|`xref:CardManager.FindCardsInfo_3_MT.adoc[FindCardsInfo(String, QueryParameterCollection)]`
+|Ищет информацию по карточкам согласно заданному поисковому запросу с учетом параметров поиска.
 
-|`xref:CardManager.PurgeCards_2_MT.adoc[PurgeCards(DateTime, Guid)]`
-|Окончательно удаляет карточки помеченные к удалению с учетом даты удаления и типа карточки.
+|`xref:CardManager.FindAggregationCardsInfo_MT.adoc[FindAggregationCardsInfo (SearchAggregationItemsRequest)]`
+|Получает список агрегатов и/или результаты фильтрации.
 
-|`xref:CardManager.RestoreCard_MT.adoc[RestoreCard(Guid)]`
-|Восстанавливает карточку помеченную к удалению.
+|`xref:CardManager.GetSearchAggregationItemsRequest_MT.adoc[GetSearchAggregationItemsRequest (SearchAggregationItemsResultType, Guid, Guid, string, int?)]`
+|Возвращает результат агрегации.
 
 |`xref:CardManager.SearchFilesCitations_MT.adoc[SearchFilesCitations(SearchFilesCitationsRequest)]`
 |Создаёт класс запроса, включающий параметры поиска и формирования цитат.
+
+|`xref:CardManager.GetSearchFilesCitationsRequest_MT.adoc[GetSearchFilesCitationsRequest(SearchFilesCitationParentObjectsType, string)]`
+|Создаёт класс запроса, включающий параметры поиска и формирования цитат.
+
 |===
 
 == Примеры
