--- a/modules/Platform-ObjectManager-SystemCards/pages/Folder_CL.adoc
+++ b/modules/Platform-ObjectManager-SystemCards/pages/Folder_CL.adoc
@@ -68,7 +68,7 @@ public abstract class Folder : IUpdatable
 |`FillBySearch(Guid, QueryParameterCollection)` |Заполнение папки результатом поискового запроса с заданным идентификатором и указанными параметрами.
 |`GetHierarchy` |Возвращает идентификаторы родительских папок, согласно иерархии.
 |`GetUnreadCount` |Возвращает количество непрочитанных карточек в папке.
-|`GetUnreadCount(Boolean)` |Возвращает количество непрочитанных карточек в папке включая архивированные элементы.
+|`GetUnreadCount(Boolean)` |Возвращает количество непрочитанных карточек в папке, включая архивированные элементы.
 |`MarkAll(Boolean)` |Изменяет статус прочитанности для всех карточек.
 |`MarkCardForDeletion(Guid)` |Требует удаление указанной карточки при отмене изменений, если задействован режим отложенных изменений.
 |`Move(Guid)` |Перемещает папку в указанную папку.
