TSK-8136 / GBL-3759 -- убрать упоминания о редакциях лицензии

--- a/modules/ROOT/partials/external-storages.adoc
+++ b/modules/ROOT/partials/external-storages.adoc
@@ -1,5 +1,5 @@
 ** xref:external-storages:external-storages-develop.adoc[]
-*** xref:external-storages:сonnector-to-storage.adoc[]
+*** xref:external-storages:connector-to-storage.adoc[]
 **** xref:external-storages:main-provider-class.adoc[]
 **** xref:external-storages:provider-gui.adoc[]
 **** xref:external-storages:load-storage-connector.adoc[]
