--- a/modules/external-storages/pages/connector-to-storage.adoc
+++ b/modules/external-storages/pages/connector-to-storage.adoc
@@ -7,7 +7,7 @@
 
 [WARNING]
 ====
-Для использования собственного внешнего хранилища необходима лицензия на систему {dv} с редакцией _Ecm_.
+Для использования собственного внешнего хранилища необходима опция лицензии _{dv} модуль интеграции с произвольными файловыми хранилищами_.
 ====
 
 Компонент провайдера используется только на сервере {dv}.
