--- a/modules/external-storages/pages/load-storage-connector.adoc
+++ b/modules/external-storages/pages/load-storage-connector.adoc
@@ -4,7 +4,7 @@
 . Сборки должны быть загружены в GAC на сервере {dv}.
 
 [start=3]
-.Чтобы добавить новый тип хранилища в {dv} (должна использоваться редакция "Ecm"):
+.Чтобы добавить новый тип хранилища в {dv} (требуется опция лицензии _{dv} модуль интеграции с произвольными файловыми хранилищами_):
 . Откройте страницу настройки внешних хранилищ в Консоли настройки {dv}.
 . Нажмите кнопку добавления нового типа хранилища и выберите в списке _Тип_ пункт *_Добавить из сборки_*.
 . Выберите сборку с классом провайдера (в папке GAC). В список _Тип_ будет добавлен новый пункт, соответствующий названию хранилища, указанному в `DisplayNameAttribute` класса хранилища.
