--- a/modules/external-storages/pages/storage-rule.adoc
+++ b/modules/external-storages/pages/storage-rule.adoc
@@ -4,7 +4,7 @@
 
 [WARNING]
 ====
-Для использования собственного типа правил добавление в хранилище необходима лицензия на систему {dv} с редакцией "Ecm".
+Для использования собственного типа правил добавление в хранилище необходима опция лицензии _{dv} модуль интеграции с произвольными файловыми хранилищами_.
 ====
 
 Компонент, реализующий правило добавления в хранилище, представляет собой библиотеку `.dll` с классом, реализующим интерфейсы `xref:Platform-StorageServer:IBinaryStorageRule_IN.adoc[IBinaryStorageRule]` и `xref:Platform-StorageServer:IExtensionInitialize_IN.adoc[IExtensionInitialize]`.
