--- a/modules/BackOffice-ObjectModel-Powers/pages/PowerOfAttorneyMainInfo_CL.adoc
+++ b/modules/BackOffice-ObjectModel-Powers/pages/PowerOfAttorneyMainInfo_CL.adoc
@@ -18,13 +18,13 @@ public sealed class PowerOfAttorneyMainInfo : BaseCardSectionRow
 |===
 |Имя |Описание
 
-|`Status` |Статус доверенности.
+|`xref:BackOffice-ObjectModel-Powers:PowerOfAttorneyStatus_EN.adoc[Status]` |Статус доверенности.
 |`UserCard` |Пользовательская карточка доверенности.
 |`Signer` |Подписант.
 |`PowerOfAttorneyStartDate` |Дата совершения доверенности.
 |`PowerOfAttorneyEndDate` |Срок действия доверенности.
 |`PowerOfAttorneyNumber` |Номер доверенности.
-|`SignatureFormat` |Формат подписи.
+|`xref:BackOffice-ObjectModel-Powers:PowerOfAttorneySignatureFormat_EN.adoc[SignatureFormat]` |Формат подписи.
 |`MachineReadablePowerOfAttorney` |Машиночитаемая доверенность.
 |`PowerOfAttorneyFormat` |Формат МЧД.
 |`Signature` |Подпись.
@@ -35,8 +35,8 @@ public sealed class PowerOfAttorneyMainInfo : BaseCardSectionRow
 |`RevocationDate` |Дата отзыва.
 |`xref:BackOffice-ObjectModel-Powers:PowerOfAttorneyRegTransferStatuses_EN.adoc[RegTransferStatus]` |Статус передачи в реестр.
 |`xref:BackOffice-ObjectModel-Powers:PowerOfAttorneyRepresentative_CL.adoc[Representative]` |Представитель.
-|`RevocationApplication` |Заявление на отзыв доверенности
-|`RevocationApplicationSignature` |Подпись заявления на отзыв доверенности
+|`RevocationApplication` |Заявление на отзыв доверенности.
+|`RevocationApplicationSignature` |Подпись заявления на отзыв доверенности.
 |===
 
 == Поля
