ERR-7430 -- отсутствовал один параметр

--- a/modules/BackOffice-ObjectModel-Services-IPartnersService/pages/IPowerOfAttorneyService_IN.adoc
+++ b/modules/BackOffice-ObjectModel-Services-IPartnersService/pages/IPowerOfAttorneyService_IN.adoc
@@ -127,7 +127,8 @@ PowerOfAttorneyHandlingFlags);`
 a|Создаёт новую СКД для представителя -- физического лица из файла МЧД
 
 .Параметры:
-* `machineReadableData` -- Данные электронной подписи для формата CADES
+* `machineReadableData` -- Данные МЧД с электронной подписью
+* `signatureData` -- Данные электронной подписи для формата CADES
 * `representative` -- Представитель
 * `signer` -- Подписант
 * `powerOfAttorneyFormat` -- Формат доверенности
