ERR-7516 -- "по переданной ссылки"

--- a/modules/Platform-ObjectModel/pages/ObjectContext_CL.adoc
+++ b/modules/Platform-ObjectModel/pages/ObjectContext_CL.adoc
@@ -42,8 +42,8 @@ public sealed class ObjectContext : IDisposable, IServiceContainer, IServiceProv
 |`Dispose` |Выполняет очистку ресурсов контекста объектов.
 |`xref:ObjectContext.FindObject_MT.adoc[FindObject<T>(QueryObject)]` |Возвращает первый результат поиска, удовлетворяющий заданным условиям.
 |`xref:ObjectContext.FindObjects_MT.adoc[FindObjects<T>(QueryObject)]` |Возвращает первый результат поиска, удовлетворяющий заданным условиям.
-|`GetObject(IObjectRef)` |Получает объект по переданной ссылки.
-|`xref:ObjectContext.GetObject_1_MT.adoc[GetObject(IObjectRef, IDictionary<String, Object>)]` |Получает объект по переданной ссылки. Также передаются дополнительные параметры получения объекта.
+|`GetObject(IObjectRef)` |Получает объект по переданной ссылке.
+|`xref:ObjectContext.GetObject_1_MT.adoc[GetObject(IObjectRef, IDictionary<String, Object>)]` |Получает объект по переданной ссылке. Также передаются дополнительные параметры получения объекта.
 |`xref:ObjectContext.GetObject_MT.adoc[GetObject<T>(Object)]` |Получает объект заданного типа с указанным идентификатором.
 |`GetObject<T>(ObjectRef<T>)` |Получает объект заданного типа из переданной ссылки.
 |`GetObjectRef<T>(Object)` |Получает ссылку на объект заданного типа с указанным идентификатором.
