--- a/modules/Platform-ObjectModel/pages/ObjectContext.GetObject_1_MT.adoc
+++ b/modules/Platform-ObjectModel/pages/ObjectContext.GetObject_1_MT.adoc
@@ -1,6 +1,6 @@
 = ObjectContext.GetObject -- метод (IObjectRef, IDictionary<String, Object>)
 
-Получает объект по переданной ссылки. Также передаются дополнительные параметры получения объекта.
+Получает объект по переданной ссылке. Также передаются дополнительные параметры получения объекта.
 
 * *Пространство имён:* `xref:ObjectModel_NS.adoc[DocsVision.Platform.ObjectModel]`
 * *Сборка:* `DocsVision.Platform.ObjectModel.dll`
